# moco

./: .gitignore  README.md
Electronics/: .gitignore  Moco.kicad_pcb  Moco.kicad_pro  Moco.kicad_sch  checklist.txt  part_list.txt  sym-lib-table
Firmware/: Cargo.toml
Firmware/.cargo/: config.toml
Firmware/src/: executor.rs  i2c.rs
